# rna-seq-kallisto-sleuth

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: .zshrc  devcontainer.json
.github/workflows/: conventional-prs.yml  release-please.yml  test-workflow.yml
config/: config.yaml  samples.tsv
tests/: test_workflow.py
tests/config/: config.yaml  units.tsv
workflow/: Snakefile
workflow/rules/: common.smk  diffexp.smk  diffsplice.smk  quant.smk
workflow/schemas/: config.schema.yaml  samples.schema.yaml  units.schema.yaml
workflow/scripts/: compose-sample-sheet.py  ens_gene_to_go.R  fgsea.R  goatools-go-enrichment-analysis.py  ihw-fdr-control.R  isoform-switch-analysis-annotate.R  sleuth-diffexp.R  sleuth-to-matrix.R  spia.R  vega_plot_volcano.py
